Criando o ex conversorMoedas e arrumando o ex retangulo

--- a/retangulo.html
+++ b/retangulo.html
@@ -6,7 +6,10 @@
     <title>Retangulo</title>
 </head>
 <body>
-    
+    <div id="res">
+        O resultado aparecerá aqui...
+    </div>
+
     <script>
         const res = document.getElementById('res');
             
