--- a/ex014-lista/caixa.html
+++ b/ex014-lista/caixa.html
@@ -23,7 +23,7 @@
 
         document.body.style.textAlign = "center";
         document.body.style.background = "#c1e8dd";
-        res.innerText = `Volume: ${volume}`;
+        res.innerText = `Volume: ${volume}m^3`;
     </script>
 </body>
 </html>
